--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "@types/leaflet": "^1.9.14",
+    "@types/md5": "^2.3.5",
     "@types/react-leaflet": "^2.8.3",
     "axios": "^1.7.8",
     "leaflet": "^1.9.4",
+    "md5": "^2.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-leaflet": "^4.2.1"
